# TronAPI-Service

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
app/: lifespan.py
app/api/: tron_routes.py
app/cache/: redis_client.py
app/core/: config.py  deps.py
app/db/: database.py  tron_repo.py
app/models/: tron_info_model.py
app/schemas/: tron_schemas.py
app/services/: tron_client.py  tron_service.py
configuration/: config.json
modules/: database.py  models.py  schemas.py  tron_client.py
modules/common/: load_config.py
tests/: conftest.py
tests/integrations/: test_tron-api.py
tests/unit/: test_database.py
