[project]
name = "Tron_API_Service"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
    "tronpy>=0.5.0",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
]
